# face_lib

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  annotated.html  classes.html  classface_1_1FaceRecognizer-members.html  classface_1_1FaceRecognizer.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  face_8cpp_source.html  face_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  vcpkg.json
.github/workflows/: cmake.yml  cpplint.yml  doc.yml  fossa.yml
html/: classface_1_1FaceRecognizer-members.html  functions_vars.html  graph_legend.html
html/search/: all_4.js  functions_0.js  functions_4.js  functions_5.js
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  functions_5.js  searchdata.js  variables_0.js
src/: CMakeLists.txt  face.cpp  face.h
test/: CMakeLists.txt  face_test.cpp
